@@ -14,6 +14,10 @@ HISTORY
 
   ++ Bugfixes:
 
+  2016-11-28: Simon Goldschmidt
+  * api_lib.c: fixed bug #49725 (send-timeout: netwonn_write() can return
+    ERR_OK without all bytes being written)
+
   2016-11-28: Ambroz Bizjak
   * tcpi_in.c: fixed bug #49717 (window size in received SYN and SYN-ACK
     assumed scaled)
